feat: container hardening + validation fixes + extension fix
- Container adapters: ProcessBuilder, RestTemplate timeouts, PDF byte retrieval
- Port retry logic (3 attempts) on binding conflicts
- PdfContentValidator integrated into PdfOperationsController
- extractExtension rejects dot-files (dotIndex <= 0)
- PdfFileHelper: only catches IOException, propagates other exceptions
- ContainerPdfValidator validates %PDF magic on container responses